Added "Spring Boot Starter" as dependencyManagement in the root of the Maven multimodule

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -9,11 +9,12 @@
   <url>http://maven.apache.org</url>
   
   <dependencies>
-    <!-- Dependencia do domain -->
+
+    <!-- Dependencia do modulo domain -->
     <dependency>
       <groupId>com.github.chiarelli.taskmanager.domain</groupId>
       <artifactId>domain</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     
     <dependency>
