--- a/application/pom.xml
+++ b/application/pom.xml
@@ -1,20 +1,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.chiarelli.taskmanager.application</groupId>
+
+  <groupId>com.github.chiarelli.taskmanager</groupId>
   <artifactId>application</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
+
   <name>application</name>
-  <url>http://maven.apache.org</url>
+  <description>Camada de aplicação</description>
+
+  <properties>
+		<java.version>17</java.version>
+	</properties>
   
   <dependencies>
 
     <!-- Dependencia do modulo domain -->
     <dependency>
-      <groupId>com.github.chiarelli.taskmanager.domain</groupId>
+      <groupId>com.github.chiarelli.taskmanager</groupId>
       <artifactId>domain</artifactId>
       <version>${project.version}</version>
+    </dependency>
+
+    <!-- Dependencias do spring -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>6.1.5</version> <!-- ou versão compatível com seu projeto -->
+    </dependency>
+
+    <!-- Outras dependencias -->
+    
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
     </dependency>
     
     <dependency>
@@ -30,10 +51,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
     </plugins>
