--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -1,12 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.chiarelli.taskmanager.domain</groupId>
+
+  <groupId>com.github.chiarelli.taskmanager</groupId>
   <artifactId>domain</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
+
   <name>domain</name>
-  <url>http://maven.apache.org</url>
+  <description>Camada de domínio</description>
+
+  <properties>
+		<java.version>17</java.version>
+	</properties>
 
  <dependencies>
 
@@ -40,15 +46,17 @@
 
   <build>
     <plugins>
+      <!-- Plugin do compilador Java -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
+
+      <!-- Plugin do JUnit 5 -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
