--- a/presentation/pom.xml
+++ b/presentation/pom.xml
@@ -23,20 +23,21 @@
 	<dependencies>
 
     <!-- Módulos internos -->
+
     <dependency>
-      <groupId>com.github.chiarelli.taskmanager.domain</groupId>
+      <groupId>com.github.chiarelli.taskmanager</groupId>
       <artifactId>domain</artifactId>
       <version>${project.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.github.chiarelli.taskmanager.application</groupId>
+      <groupId>com.github.chiarelli.taskmanager</groupId>
       <artifactId>application</artifactId>
       <version>${project.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.github.chiarelli.taskmanager.infra</groupId>
+      <groupId>com.github.chiarelli.taskmanager</groupId>
       <artifactId>infra</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -59,6 +60,13 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
+		<!-- Tests -->
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -76,6 +84,14 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<addResources>true</addResources>
+					<fork>true</fork>
+				</configuration>
+    	</plugin>
     </plugins>
   </build>
 
