--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -22,6 +22,29 @@
       <version>1.18.38</version>
     </dependency>
 
+    <!-- Dependencias de Validação -->
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>9.0.1.Final</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/jakarta.el/jakarta.el-api -->
+    <dependency>
+      <groupId>jakarta.el</groupId>
+      <artifactId>jakarta.el-api</artifactId>
+      <version>6.0.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.el -->
+    <dependency>
+        <groupId>org.glassfish</groupId>
+        <artifactId>jakarta.el</artifactId>
+        <version>4.0.2</version>
+        <scope>compile</scope>
+    </dependency>
+
     <!-- Dependencias de Teste -->
     <dependency>
       <groupId>org.assertj</groupId>
