--- a/presentation/pom.xml
+++ b/presentation/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
+  <parent>
     <groupId>com.github.chiarelli.taskmanager</groupId>
     <artifactId>task-manager</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-	<groupId>com.github.chiarelli.taskmanager.presentation</groupId>
+	<groupId>com.github.chiarelli.taskmanager</groupId>
 	<artifactId>presentation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
@@ -23,7 +23,6 @@
 	<dependencies>
 
     <!-- Módulos internos -->
-
     <dependency>
       <groupId>com.github.chiarelli.taskmanager</groupId>
       <artifactId>domain</artifactId>
@@ -35,41 +34,30 @@
       <artifactId>application</artifactId>
       <version>${project.version}</version>
     </dependency>
-
-    <dependency>
-      <groupId>com.github.chiarelli.taskmanager</groupId>
-      <artifactId>infra</artifactId>
-      <version>${project.version}</version>
-    </dependency>
 		
     <!-- Dependencias Spring Boot Project -->
+		 <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-
-		<!-- Tests -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -84,14 +72,6 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<addResources>true</addResources>
-					<fork>true</fork>
-				</configuration>
-    	</plugin>
     </plugins>
   </build>
 
