--- a/spring-boot-run/pom.xml
+++ b/spring-boot-run/pom.xml
@@ -60,6 +60,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		 <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>1.19.7</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>mongodb</artifactId>
+      <version>1.19.7</version>
+      <scope>test</scope>
+    </dependency>
+
 	</dependencies>
 
 	<build>
