--- a/spring-boot-run/src/main/resources/application.properties
+++ b/spring-boot-run/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 spring.application.name=task-manager-spring-boot-run
 
 # Mongo DB
-spring.data.mongodb.uri=mongodb://localhost:27017/taskmanager
-spring.data.mongodb.username=taskmanager
-spring.data.mongodb.password=pR0sb0FboS4
+spring.data.mongodb.uri=mongodb://taskmanager:pR0sb0FboS4@localhost:27017/taskmanager?authSource=admin
