--- a/presentation/pom.xml
+++ b/presentation/pom.xml
@@ -41,6 +41,11 @@
       <artifactId>spring-context</artifactId>
     </dependency>
     
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
