--- a/application/pom.xml
+++ b/application/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>spring-context</artifactId>
       <version>6.1.5</version> <!-- ou versão compatível com seu projeto -->
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+      <version>3.5.2</version>
+    </dependency>
 
     <!-- Outras dependencias -->
     <!-- https://mvnrepository.com/artifact/io.github.jkratz55/spring-mediatr -->
